# gst-tools-sailfish

./: CMakeLists.txt  gst-inspect.c  gst-launch.c  tools.h
rpm/: gst-tools.spec
